--- a/BlockRogue/packages.config
+++ b/BlockRogue/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Nancy" version="2.0.0-clinteastwood" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="OpenTK" version="1.1.1589.5942" targetFramework="net461" />
+  <package id="RLNET" version="1.0.6" targetFramework="net461" />
   <package id="RogueSharp" version="4.0.0-pre" targetFramework="net461" />
 </packages>
